--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
     global:
         - PACKAGE="UnitTesting"
     matrix:
-        - SUBLIME_TEXT_VERSION="2"
+        # - SUBLIME_TEXT_VERSION="2"
         - SUBLIME_TEXT_VERSION="3"
 
 install:
