--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,15 @@ env:
         - SUBLIME_TEXT_VERSION="3"
 
 install:
-    - sh -e travis.sh $SUBLIME_TEXT_VERSION $PACKAGE
+    - sh -e sbin/travis.sh $SUBLIME_TEXT_VERSION $PACKAGE
 
 before_script:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
 
 script:
-    - python $HOME/.config/sublime-text-$SUBLIME_TEXT_VERSION/Packages/UnitTesting/sbin/run.py $PACKAGE
+    - UNITTESTING=$HOME/.config/sublime-text-$SUBLIME_TEXT_VERSION/Packages/UnitTesting
+    - python $UNITTESTING/sbin/run.py $PACKAGE
 
 notifications:
     email: false
