--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
-# refer to https://github.com/randy3k/UnitTesting-example/blob/master/.travis.yml if you are looking for a working example.
-
-language: python
-python:
-    - "2.7"
-    - "3.3"
+# if you are looking for a working example
+# refer to https://github.com/randy3k/UnitTesting-example/blob/master/.travis.yml
 
 env:
     global:
