--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,6 @@
+# if you are looking for a working example
+# refer to https://github.com/randy3k/UnitTesting-example/blob/master/appveyor.yml
+
 environment:
     global:
         # Your package name
