--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 # if you are looking for a working example
 # refer to https://github.com/randy3k/UnitTesting-example/blob/master/.travis.yml
 
+os:
+    - linux
+    - osx
+
 env:
     global:
         - PACKAGE="UnitTesting"
