--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,16 @@ env:
     matrix:
         - SUBLIME_TEXT_VERSION="2"
         - SUBLIME_TEXT_VERSION="3"
+        - SUBLIME_TEXT_VERSION="2" PCINSTALL=true
+        - SUBLIME_TEXT_VERSION="3" PCINSTALL=true
 
 install:
+    - if [ "$TRAVIS_OS_NAME" == "linux"  ]; then
+            export DISPLAY=:99.0;
+            sh -e /etc/init.d/xvfb start;
+      fi
     - sh sbin/travis.sh bootstrap
+    - if [ "$PCINSTALL" == true ]; then sh sbin/travis.sh install_package_control; fi
 
 script:
     - sh sbin/travis.sh run_tests
