--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,13 @@ env:
         - SUBLIME_TEXT_VERSION="2" PCINSTALL=true
         - SUBLIME_TEXT_VERSION="3" PCINSTALL=true
 
-install:
+before_install:
     - if [ "$TRAVIS_OS_NAME" == "linux"  ]; then
             export DISPLAY=:99.0;
             sh -e /etc/init.d/xvfb start;
       fi
+
+install:
     - sh sbin/travis.sh bootstrap
     - if [ "$PCINSTALL" == true ]; then sh sbin/travis.sh install_package_control; fi
 
