--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 # if you are looking for a working example
 # refer to https://github.com/randy3k/UnitTesting-example/blob/master/.travis.yml
-
 os:
     - linux
     - osx
@@ -23,11 +22,15 @@ before_install:
       fi
 
 install:
+    - sudo pip install requests[security] python-coveralls
     - sh sbin/travis.sh bootstrap
     - if [ "$PCINSTALL" == true ]; then sh sbin/travis.sh install_package_control; fi
 
 script:
-    - sh sbin/travis.sh run_tests
+    - sh sbin/travis.sh run_tests --coverage
+
+after_success:
+    - coveralls
 
 notifications:
     email:
