--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,6 @@ before_install:
       fi
 
 install:
-    - if [ "$SUBLIME_TEXT_VERSION" == "3"  ]; then sudo pip install python-coveralls; fi
     - sh sbin/travis.sh bootstrap
     - if [ "$PCINSTALL" == true ]; then sh sbin/travis.sh install_package_control; fi
 
@@ -30,7 +29,10 @@ script:
     - sh sbin/travis.sh run_tests --coverage
 
 after_success:
-    - if [ "$SUBLIME_TEXT_VERSION" == "3" ]; then coveralls; fi
+    - if [ "$SUBLIME_TEXT_VERSION" == "3" ]; then
+            sudo pip install python-coveralls;
+            coveralls;
+      fi
 
 notifications:
     email:
