--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 # if you are looking for a working example
 # refer to https://github.com/randy3k/UnitTesting-example/blob/master/.travis.yml
+
+# use container based infrastructure
+sudo: false
+
 os:
     - linux
     - osx
