--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,50 @@
 # if you are looking for a working example
 # refer to https://github.com/randy3k/UnitTesting-example/blob/master/.travis.yml
 
-# use container based infrastructure
 sudo: false
-
-os:
-    - linux
-    - osx
 
 env:
     global:
         - PACKAGE="UnitTesting"
-    matrix:
-        - SUBLIME_TEXT_VERSION="2"
-        - SUBLIME_TEXT_VERSION="3"
-        - SUBLIME_TEXT_VERSION="2" PCINSTALL=true
-        - SUBLIME_TEXT_VERSION="3" PCINSTALL=true
-        - SUBLIME_TEXT_VERSION="2" PACKAGE_RELOADER_TAG="master"
-        - SUBLIME_TEXT_VERSION="3" PACKAGE_RELOADER_TAG="master"
 
 matrix:
-  allow_failures:
-    - env:
-        - SUBLIME_TEXT_VERSION="2" PACKAGE_RELOADER_TAG="master"
-        - SUBLIME_TEXT_VERSION="3" PACKAGE_RELOADER_TAG="master"
+    include:
+        - os: linux
+          python: 2.6
+          env: SUBLIME_TEXT_VERSION="2"
+        - os: linux
+          python: 2.6
+          env: SUBLIME_TEXT_VERSION="2" PCINSTALL=true
+        - os: linux
+          python: 2.6
+          env: SUBLIME_TEXT_VERSION="2" PACKAGE_RELOADER_TAG="master"
+        - os: linux
+          python: 3.3
+          env: SUBLIME_TEXT_VERSION="3"
+        - os: linux
+          python: 3.3
+          env: SUBLIME_TEXT_VERSION="3" PCINSTALL=true
+        - os: linux
+          python: 3.3
+          env: SUBLIME_TEXT_VERSION="3" PACKAGE_RELOADER_TAG="master"
+        - os: osx
+          language: generic
+          env: SUBLIME_TEXT_VERSION="2"
+        - os: osx
+          language: generic
+          env: SUBLIME_TEXT_VERSION="2" PCINSTALL=true
+        - os: osx
+          language: generic
+          env: SUBLIME_TEXT_VERSION="2" PACKAGE_RELOADER_TAG="master"
+        - os: osx
+          language: generic
+          env: SUBLIME_TEXT_VERSION="3"
+        - os: osx
+          language: generic
+          env: SUBLIME_TEXT_VERSION="3" PCINSTALL=true
+        - os: osx
+          language: generic
+          env: SUBLIME_TEXT_VERSION="3" PACKAGE_RELOADER_TAG="master"
 
 before_install:
     - if [ "$TRAVIS_OS_NAME" == "linux"  ]; then
@@ -39,8 +60,12 @@ script:
     - sh sbin/travis.sh run_tests --coverage
 
 after_success:
+    - if [ "$SUBLIME_TEXT_VERSION" == "3" ] && [ "$TRAVIS_OS_NAME" == "osx" ]; then
+            brew update;
+            brew install python3;
+      fi
     - if [ "$SUBLIME_TEXT_VERSION" == "3" ]; then
-            pip install --user python-coveralls;
+            pip3 install python-coveralls;
             coveralls;
       fi
 
