--- a/.travis.yml
+++ b/.travis.yml
@@ -10,21 +10,27 @@ env:
 matrix:
     include:
         - os: linux
-          python: 2.6
+          language: python
+          python: 2.7
           env: SUBLIME_TEXT_VERSION="2"
         - os: linux
-          python: 2.6
+          language: python
+          python: 2.7
           env: SUBLIME_TEXT_VERSION="2" PCINSTALL=true
         - os: linux
-          python: 2.6
+          language: python
+          python: 2.7
           env: SUBLIME_TEXT_VERSION="2" PACKAGE_RELOADER_TAG="master"
         - os: linux
+          language: python
           python: 3.3
           env: SUBLIME_TEXT_VERSION="3"
         - os: linux
+          language: python
           python: 3.3
           env: SUBLIME_TEXT_VERSION="3" PCINSTALL=true
         - os: linux
+          language: python
           python: 3.3
           env: SUBLIME_TEXT_VERSION="3" PACKAGE_RELOADER_TAG="master"
         - os: osx
@@ -63,9 +69,12 @@ after_success:
     - if [ "$SUBLIME_TEXT_VERSION" == "3" ] && [ "$TRAVIS_OS_NAME" == "osx" ]; then
             brew update;
             brew install python3;
+            pip3 install python-coveralls;
+      fi
+    - if [ "$SUBLIME_TEXT_VERSION" == "3" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then
+            pip install python-coveralls;
       fi
     - if [ "$SUBLIME_TEXT_VERSION" == "3" ]; then
-            pip3 install python-coveralls;
             coveralls;
       fi
 
