--- a/.travis.yml
+++ b/.travis.yml
@@ -3,40 +3,18 @@
 
 sudo: false
 
+os:
+    - linux
+    - osx
+
 env:
     global:
         - PACKAGE="UnitTesting"
-
-matrix:
-    include:
-        - os: linux
-          language: python
-          python: 2.7
-          env: SUBLIME_TEXT_VERSION="2"
-        - os: linux
-          language: python
-          python: 2.7
-          env: SUBLIME_TEXT_VERSION="2" PCINSTALL=true
-        - os: linux
-          language: python
-          python: 3.3
-          env: SUBLIME_TEXT_VERSION="3"
-        - os: linux
-          language: python
-          python: 3.3
-          env: SUBLIME_TEXT_VERSION="3" PCINSTALL=true
-        - os: osx
-          language: generic
-          env: SUBLIME_TEXT_VERSION="2"
-        - os: osx
-          language: generic
-          env: SUBLIME_TEXT_VERSION="2" PCINSTALL=true
-        - os: osx
-          language: generic
-          env: SUBLIME_TEXT_VERSION="3"
-        - os: osx
-          language: generic
-          env: SUBLIME_TEXT_VERSION="3" PCINSTALL=true
+    matrix:
+        - SUBLIME_TEXT_VERSION="2"
+        - SUBLIME_TEXT_VERSION="3"
+        - SUBLIME_TEXT_VERSION="2" PCINSTALL=true
+        - SUBLIME_TEXT_VERSION="3" PCINSTALL=true
 
 before_install:
     - if [ "$TRAVIS_OS_NAME" == "linux"  ]; then
@@ -52,15 +30,8 @@ script:
     - sh sbin/travis.sh run_tests --coverage
 
 after_success:
-    - if [ "$SUBLIME_TEXT_VERSION" == "3" ] && [ "$TRAVIS_OS_NAME" == "osx" ]; then
-            brew update;
-            brew install python3;
-            pip3 install python-coveralls;
-      fi
-    - if [ "$SUBLIME_TEXT_VERSION" == "3" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then
-            pip install python-coveralls;
-      fi
     - if [ "$SUBLIME_TEXT_VERSION" == "3" ]; then
+            pip install coveralls;
             coveralls;
       fi
 
