--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ sudo: false
 
 env:
     global:
-        # Package name
         - PACKAGE="UnitTesting"
 
 matrix:
@@ -15,22 +14,24 @@ matrix:
           env: SUBLIME_TEXT_VERSION="2"
         - os: linux
           language: python
+          env: SUBLIME_TEXT_VERSION="2" PCINSTALL=true
+        - os: linux
+          language: python
+          python: 3.3
           env: SUBLIME_TEXT_VERSION="3"
+        - os: linux
+          language: python
+          python: 3.3
+          env: SUBLIME_TEXT_VERSION="3" PCINSTALL=true
         - os: osx
           language: generic
           env: SUBLIME_TEXT_VERSION="2"
         - os: osx
           language: generic
-          env: SUBLIME_TEXT_VERSION="3"
-        - os: linux
-          language: python
           env: SUBLIME_TEXT_VERSION="2" PCINSTALL=true
-        - os: linux
-          language: python
-          env: SUBLIME_TEXT_VERSION="3" PCINSTALL=true
         - os: osx
           language: generic
-          env: SUBLIME_TEXT_VERSION="2" PCINSTALL=true
+          env: SUBLIME_TEXT_VERSION="3"
         - os: osx
           language: generic
           env: SUBLIME_TEXT_VERSION="3" PCINSTALL=true
@@ -51,10 +52,13 @@ script:
 after_success:
     - if [ "$SUBLIME_TEXT_VERSION" == "3" ] && [ "$TRAVIS_OS_NAME" == "osx" ]; then
             brew update;
-            brew install python;
+            brew install python3;
+            pip3 install python-coveralls;
+      fi
+    - if [ "$SUBLIME_TEXT_VERSION" == "3" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then
+            pip install python-coveralls;
       fi
     - if [ "$SUBLIME_TEXT_VERSION" == "3" ]; then
-            pip install coveralls;
             coveralls;
       fi
 
