--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,9 @@ environment:
     global:
         # Your package name
         PACKAGE: "UnitTesting"
+        COVERALLS_REPO_TOKEN:
+            secure: TJ2BCRujJaYemSu/OwzvdH85ACGyRowdkx7t4sR4qJ/MwYcGwpV2UwaYFuxMvNAr
+
     matrix:
         - SUBLIME_TEXT_VERSION : "2"
         - SUBLIME_TEXT_VERSION : "3"
@@ -21,3 +24,19 @@ build: off
 
 test_script:
     - ps: .\sbin\appveyor.ps1 "run_tests" -coverage -verbose
+
+# this is disabled by default since it doesn't play well with
+# travis-ci if both of them are used simultaneously. Additionaly
+# coveralls.io doesn't support grouping appveyor sub-builds.
+# on_success:
+#     - cmd: SET COVERALLS_SERVICE_NAME=appveyor
+#     - cmd: SET TRAVIS_JOB_ID=%APPVEYOR_BUILD_ID%
+#     - cmd: SET TRAVIS_BRANCH=%APPVEYOR_REPO_BRANCH%
+#     - cmd: SET PYTHON=C:\Python33
+#     - cmd: SET PATH=%PYTHON%;%PYTHON%\Scripts;%PATH%
+#     - ps: |
+#         if (${env:SUBLIME_TEXT_VERSION} -eq 3) {
+#             pip install python-coveralls
+#             coveralls 2>&1 | %{ "$_" }
+#             write-host
+#         }
