--- a/.travis.yml
+++ b/.travis.yml
@@ -6,35 +6,22 @@ sudo: false
 env:
     global:
         - PACKAGE="UnitTesting"
+        - SUBLIME_TEXT_VERSION="3"
 
 matrix:
     include:
         - os: linux
           language: python
-          env: SUBLIME_TEXT_VERSION="2"
-        - os: linux
-          language: python
-          env: SUBLIME_TEXT_VERSION="2" PCINSTALL=true
+          python: 3.3
         - os: linux
           language: python
           python: 3.3
-          env: SUBLIME_TEXT_VERSION="3"
-        - os: linux
-          language: python
-          python: 3.3
-          env: SUBLIME_TEXT_VERSION="3" PCINSTALL=true
+          env: PCINSTALL=true
         - os: osx
           language: generic
-          env: SUBLIME_TEXT_VERSION="2"
         - os: osx
           language: generic
-          env: SUBLIME_TEXT_VERSION="2" PCINSTALL=true
-        - os: osx
-          language: generic
-          env: SUBLIME_TEXT_VERSION="3"
-        - os: osx
-          language: generic
-          env: SUBLIME_TEXT_VERSION="3" PCINSTALL=true
+          env: PCINSTALL=true
 
 before_install:
     - if [ "$TRAVIS_OS_NAME" == "linux"  ]; then
@@ -50,17 +37,18 @@ script:
     - sh sbin/travis.sh run_tests --coverage
 
 after_success:
-    - if [ "$SUBLIME_TEXT_VERSION" == "3" ] && [ "$TRAVIS_OS_NAME" == "osx" ]; then
+    - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
             brew update;
             brew install python3;
             pip3 install python-coveralls;
+            pip3 install codecov;
       fi
-    - if [ "$SUBLIME_TEXT_VERSION" == "3" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
             pip install python-coveralls;
+            pip install codecov;
       fi
-    - if [ "$SUBLIME_TEXT_VERSION" == "3" ]; then
-            coveralls;
-      fi
+    - coveralls
+    - codecov
 
 notifications:
     email:
