--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ environment:
 
 install:
     - ps: .\sbin\appveyor.ps1 "bootstrap" -verbose
+    - ps: .\sbin\appveyor.ps1 "install_color_scheme_unit" -verbose
     - ps: if (${env:PCINSTALL} -eq $true) { .\sbin\appveyor.ps1 "install_package_control" -verbose }
 
 build: off
