--- a/.travis.yml
+++ b/.travis.yml
@@ -28,24 +28,28 @@ before_install:
       fi
 
 install:
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+            pip install python-coveralls;
+            pip install codecov;
+            pip install flake8;
+            pip install flake8-docstrings;
+      elif [ "$TRAVIS_OS_NAME" == "osx" ]; then
+            brew update;
+            brew install python3;
+            pip3 install python-coveralls;
+            pip3 install codecov;
+            pip3 install flake8;
+            pip3 install flake8-docstrings;
+      fi
     - sh sbin/travis.sh bootstrap
     - sh sbin/travis.sh install_color_scheme_unit
     - if [ "$PCINSTALL" == true ]; then sh sbin/travis.sh install_package_control; fi
 
 script:
+    - flake8 --statistics
     - sh sbin/travis.sh run_tests --coverage
 
 after_success:
-    - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
-            brew update;
-            brew install python3;
-            pip3 install python-coveralls;
-            pip3 install codecov;
-      fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-            pip install python-coveralls;
-            pip install codecov;
-      fi
     - coveralls
     - codecov
 
