--- a/.travis.yml
+++ b/.travis.yml
@@ -29,13 +29,11 @@ before_install:
 
 install:
     - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-            pip install codecov;
             pip install flake8;
             pip install flake8-docstrings;
       elif [ "$TRAVIS_OS_NAME" == "osx" ]; then
             brew update;
             brew install python3;
-            pip3 install codecov;
             pip3 install flake8;
             pip3 install flake8-docstrings;
       fi
@@ -48,6 +46,11 @@ script:
     - sh sbin/travis.sh run_tests --coverage
 
 after_success:
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+            pip install codecov;
+      elif [ "$TRAVIS_OS_NAME" == "osx" ]; then
+            pip3 install codecov;
+      fi
     - codecov
 
 notifications:
