--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 # if you are looking for a working example
-# refer to https://github.com/randy3k/UnitTesting-example/blob/master/.circleci
+# refer to https://github.com/randy3k/UnitTesting-example/blob/master/.circleci/config.yml
 
 jobs:
   build-linux:
