escape PYTHON path

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,7 +22,7 @@ test_script:
     - ps: .\sbin\appveyor.ps1 "run_tests" -coverage -verbose
 
 after_test:
-    - "SET PYTHON=C:\Python33"
+    - "SET PYTHON=C:\\Python33"
     - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
     - pip install codecov
     - codecov
