--- a/.travis.yml
+++ b/.travis.yml
@@ -28,15 +28,12 @@ before_install:
       fi
 
 install:
-    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-            pip install flake8;
-            pip install flake8-docstrings;
-      elif [ "$TRAVIS_OS_NAME" == "osx" ]; then
+    - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
             brew update;
             brew install python3;
-            pip3 install flake8;
-            pip3 install flake8-docstrings;
       fi
+    - pip3 install flake8;
+    - pip3 install flake8-docstrings;
     - sh sbin/travis.sh bootstrap
     - sh sbin/travis.sh install_color_scheme_unit
     - if [ "$PCINSTALL" == true ]; then sh sbin/travis.sh install_package_control; fi
@@ -46,11 +43,7 @@ script:
     - sh sbin/travis.sh run_tests --coverage
 
 after_success:
-    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-            pip install codecov;
-      elif [ "$TRAVIS_OS_NAME" == "osx" ]; then
-            pip3 install codecov;
-      fi
+    - pip3 install codecov;
     - codecov
 
 notifications:
