install or upgrade python
as homebrew as rename python formula

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
           sh sbin/circleci.sh install_package_control
           sh sbin/circleci.sh run_tests --coverage
       - run: |
-          brew install python3
+          brew install python || brew upgrade python
           pip3 install codecov
           codecov
 
