--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_install:
 install:
     - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
             brew update;
-            brew upgrade python;
+            brew install python || brew upgrade python;
       fi
     - pip3 install flake8;
     - pip3 install flake8-docstrings;
