--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
             brew update;
             brew install python || brew upgrade python;
       fi
-    - pip3 install flake8;
+    - pip3 install flake8==3.5;
     - pip3 install flake8-docstrings;
     - sh sbin/travis.sh bootstrap
     - sh sbin/travis.sh install_color_scheme_unit
