--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ jobs:
           sh sbin/circleci.sh install_package_control
           sh sbin/circleci.sh run_tests --coverage
       - run: |
+          brew upgrade python
           pip3 install codecov
           codecov
 
