workaround circleci error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - checkout
       - run: |
+          # https://discuss.circleci.com/t/circleci-failing-when-using-sudo-apt-get-update/29269/9
+          sudo sed -i '/jessie-backports/d' /etc/apt/sources.list
+          sudo sed -i '/jessie-updates/d' /etc/apt/sources.list
           sudo apt-get update
           sudo apt-get install libglib2.0-0 libgtk2.0-0
       - run: |
