--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,8 @@ matrix:
     include:
         - os: linux
           language: python
-          python: 3.3
         - os: linux
           language: python
-          python: 3.3
           env: PCINSTALL=true
         - os: osx
           language: generic
@@ -21,11 +19,8 @@ matrix:
           language: generic
           env: PCINSTALL=true
 
-before_install:
-    - if [ "$TRAVIS_OS_NAME" == "linux"  ]; then
-            export DISPLAY=:99.0;
-            sh -e /etc/init.d/xvfb start;
-      fi
+services:
+    - xvfb
 
 install:
     - pip3 install flake8==3.5;
