--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,33 +6,24 @@ version: 2
 jobs:
   build-linux:
     docker:
-      - image: circleci/python
-    environment:
-      PACKAGE: "UnitTesting"
-      SUBLIME_TEXT_VERSION: "3"
+      - image: randy3k/unittesting
     steps:
       - checkout
+      - run: sh -e /etc/init.d/xvfb start
       - run: |
-          sudo apt-get update
-          sudo apt-get install libglib2.0-0 libgtk-3-0
-      - run: |
-          export DISPLAY=:99.0
-          Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-          PATH="$HOME/.local/bin:$PATH"
+          export PATH="$HOME/.local/bin:$PATH"
           sh sbin/circleci.sh bootstrap
           sh sbin/circleci.sh install_color_scheme_unit
           sh sbin/circleci.sh install_package_control
           sh sbin/circleci.sh run_tests --coverage
       - run: |
-          sudo pip install codecov
+          apt-get install python3-pip -y
+          pip3 install codecov
           codecov
 
   build-macos:
     macos:
       xcode: "9.0"
-    environment:
-      PACKAGE: "UnitTesting"
-      SUBLIME_TEXT_VERSION: "3"
     steps:
       - checkout
       - run: |
