--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,6 @@
+# if you are looking for a working example
+# refer to https://github.com/randy3k/UnitTesting-example/blob/master/.github/workflows/build.yml
+
 name: build
 
 on: [push, pull_request]
