--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,8 @@ jobs:
         apt-get install python3-pip -y
         pip3 install codecov
         codecov
+      env:
+        CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
 
   macos:
     runs-on: macOS-latest
@@ -36,6 +38,8 @@ jobs:
     - run: |
         pip3 install codecov
         codecov
+      env:
+        CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
 
   windows:
     runs-on: windows-latest
@@ -49,3 +53,5 @@ jobs:
     - run: |
         pip3 install codecov
         codecov
+      env:
+        CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
