--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
           sh sbin/github.sh run_tests --coverage
       - run: |
           apt-get install python3-pip -y
+          pip3 install coverage==4.5.3
           pip3 install codecov
           codecov
         env:
@@ -42,6 +43,7 @@ jobs:
           sh sbin/github.sh install_package_control
           sh sbin/github.sh run_tests --coverage
       - run: |
+          pip3 install coverage==4.5.3
           pip3 install codecov
           codecov
         env:
@@ -63,6 +65,7 @@ jobs:
           ./sbin/github.ps1 "install_package_control" -verbose
           ./sbin/github.ps1 "run_tests" -coverage -verbose
       - run: |
+          pip3 install coverage==4.5.3
           pip3 install codecov
           codecov
         env:
