--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,8 +26,7 @@ jobs:
           sh sbin/github.sh run_tests --coverage
       - run: |
           apt-get install python3-pip -y
-          pip3 install coverage==4.5.3
-          pip3 install codecov
+          pip3 install coverage==4.5.4 codecov==2.0.15
           codecov
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
@@ -43,8 +42,7 @@ jobs:
           sh sbin/github.sh install_package_control
           sh sbin/github.sh run_tests --coverage
       - run: |
-          pip3 install coverage==4.5.3
-          pip3 install codecov
+          pip3 install coverage==4.5.4 codecov==2.0.15
           codecov
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
@@ -65,8 +63,7 @@ jobs:
           ./sbin/github.ps1 "install_package_control" -verbose
           ./sbin/github.ps1 "run_tests" -coverage -verbose
       - run: |
-          pip3 install coverage==4.5.3
-          pip3 install codecov
+          pip3 install coverage==4.5.4 codecov==2.0.15
           codecov
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
