--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,5 @@ test_script:
 after_test:
     - "SET PYTHON=C:\\Python33"
     - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
-    - pip install coverage==4.5.3
-    - pip install codecov
+    - pip install coverage==4.5.4 codecov==2.0.15
     - codecov
