--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,9 +61,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: [x32, x64]
+        version: [3, 4]
     env:
-      SUBLIME_TEXT_ARCH: ${{ matrix.arch }}
+      SUBLIME_TEXT_VERSION: ${{ matrix.version }}
     steps:
       - uses: actions/checkout@v1
       - run: |
