--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,10 +14,11 @@ install:
 build: off
 
 test_script:
-    - ps: .\sbin\appveyor.ps1 "run_tests" -coverage -verbose
+    # - ps: .\sbin\appveyor.ps1 "run_tests" -coverage -verbose
+    - ps: .\sbin\appveyor.ps1 "run_tests" -verbose
 
-after_test:
-    - "SET PYTHON=C:\\Python33"
-    - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
-    - pip install coverage==4.5.4 codecov==2.0.15
-    - codecov
+# after_test:
+#     - "SET PYTHON=C:\\Python33"
+#     - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
+#     - pip install coverage==4.5.4 codecov==2.0.15
+#     - codecov
