set up cron job instead

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -2,9 +2,8 @@ name: Publish Docker image
 
 on:
   push:
-    branches: [main, master]
-    tags:
-      - '*'
+  schedule:
+    - cron: "22 2 * * 2"
 
 jobs:
   push_to_registry:
