--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,6 +1,10 @@
 name: Publish Docker image
 
 on:
+  push:
+    paths:
+      - 'docker/**'
+      - '.github/workflows/docker.yaml'
   schedule:
     - cron: "22 2 * * 2"
 
