--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -2,10 +2,9 @@ name: Publish Docker image
 
 on:
   push:
-    branches: [main, master]
     paths:
       - 'docker/**'
-      - '.github/workflows/*.yaml'
+      - '.github/workflows/docker.yaml'
   schedule:
     - cron: "22 2 * * 2"
 
