fix syntax error in docker.yaml

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -2,6 +2,7 @@ name: Publish Docker image
 
 on:
   push:
+    branches: [main, master]
     paths:
       - 'docker/**'
       - '.github/workflows/docker.yaml'
@@ -27,9 +28,7 @@ jobs:
         with:
           context: ./docker/
           push: true
-          tags:
-            - sublimetext/unittesting:latest
-            - sublimetext/unittesting:x64
+          tags: sublimetext/unittesting:latest,sublimetext/unittesting:x64
 
       - name: Build and push x32 image
         uses: docker/build-push-action@v2
@@ -38,5 +37,4 @@ jobs:
           push: true
           build-args: |
             arch=i386
-          tags:
-            - sublimetext/unittesting:x32
+          tags: sublimetext/unittesting:x32
