--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 # if you are looking for a working example
-# refer to https://github.com/randy3k/UnitTesting-example/blob/master/.github/workflows/build.yml
+# refer to https://github.com/randy3k/UnitTesting-example/blob/master/.github/workflows/test.yaml
 
-name: Test
+name: test
 
 on: [push, pull_request]
 
