--- a/actions/setup-unittesting/action.yaml
+++ b/actions/setup-unittesting/action.yaml
@@ -1,6 +1,9 @@
 name: Setup the testing environment for Sublime Text
 description: Setup the testing environment for Sublime Text
 inputs:
+  package-name:
+    description: Package name. Derived from repo name if empty.
+    default: ''
   sublime-text-version:
     description: Sublime Text Version (3 or 4).
     required: true
@@ -9,19 +12,16 @@ inputs:
     description: Sublime Text Version Arch. It could be x32 for Sublime Text 3.
     required: true
     default: x64
-  package-name:
-    description: Package name. Derived from repo name if empty.
-    default: ''
   unittesting-version:
-    description: Version of UnitTesting. Default to the latest release.
+    description: Version of UnitTesting. Use latest release if empty.
     required: false
     default: ''
   install-coverage:
-    description: Whether to install package control.
+    description: Whether to install coverage.
     required: true
     default: true
   coverage-version:
-    description: Version of coverage. Default to the latest release.
+    description: Version of coverage. Use latest release if empty.
     required: false
     default: ''
   install-package-control:
